--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <lionk rel="stylesheet" type="text/css" href="/resources/css/style.css"
+  </head>
+  <body>
+    <h1>Discover hidden places in the world around you</h1>
+    <a href="/">Download Excursion (Coming soon!)</a>
+  </body>
+</html>
