--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <lionk rel="stylesheet" type="text/css" href="/resources/css/style.css"
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <a href="/">Download Excursion (Coming soon!)</a>
+    <p><video><source src="resources/videos/excursion.mp4" type="video/mp4"></video></p>
+    <h2>Your personal travel guide</h2>
+    <p>Exursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="resources/images/camp.jpg" alt="Image of Campsite" /></p>
+    <p><img src="resources/images/phone.png" alt="Phone Icon" /></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a href="/">Download Excursion (Coming soon!)</a>
+    <p class="copyright">&copy; Excursion</p>
   </body>
 </html>
